Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/Layout_Section__c.object-meta.xml
<CustomObject>
    <description>Stores section layout details for the Dynamic Record Layout.</description>
    <label>Layout Section</label>
    <nameField>
        <displayFormat>SEC-{000000}</displayFormat>
        <label>Section ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layout Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>