Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/fields/Dynamic_Layout__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Layout__c</fullName>
    <label>Dynamic Layout</label>
    <referenceTo>Dynamic_Layout__c</referenceTo>
    <relationshipLabel>Layout Sections</relationshipLabel>
    <relationshipName>Layout_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>