Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/fields/Horizontal_Scroll__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Scroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Horizontal Scroll</label>
    <type>Checkbox</type>
</CustomField>