Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/fields/Number_of_Columns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Columns__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Number of Columns</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>