Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows for nested sections by referencing a parent section.</description>
    <label>Parent Section</label>
    <referenceTo>Layout_Section__c</referenceTo>
    <relationshipLabel>Child Sections</relationshipLabel>
    <relationshipName>Child_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>