Custom Record Page/Test/force-app/main/default/objects/Layout_Section__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>